adding deployer digital ocean

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -9,6 +9,11 @@
       href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=Source+Code+Pro:wght@400;600&display=swap"
       rel="stylesheet"
     />
+    <script>
+      if (global === undefined) {
+        var global = window;
+      }
+    </script>
 
     <title>Op Stack L2 Deployment</title>
     <script type="module" src="./polyfills.ts"></script>
