feat: logo update

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -10,7 +10,7 @@
       rel="stylesheet"
     />
 
-    <title>Op Stack L2 Deployment</title>
+    <title>Surge SuperStack L2 Deployment</title>
     <script type="module" src="./polyfills.ts"></script>
   </head>
   <body>
